--- a/ct1/physicsct.html
+++ b/ct1/physicsct.html
@@ -71,7 +71,7 @@
   <h1>Select The Batch</h1>
 
   <div class="button-stack">
-    <a href="pdfs/b55phyct.pdf">BATCH 55</a>
+    <a href="physicsct.html/pdfs/b55phyct.pdf">BATCH 55</a>
     </div>
 
   <script>
