--- a/ct.html
+++ b/ct.html
@@ -94,7 +94,7 @@
 <div class="special-btn"> : _  ALL QUESTIONS  _ : </div>
 
   <div class="button-grid">
-  <a href="ct1/physicsct.html" target="_blank" class="btn">PHYSICS</a>
+  <a href="physicsct.html" target="_blank" class="btn">PHYSICS</a>
   <a href="ct1/chemistryct.html" target="_blank" class="btn">CHEMISTRY</a>
   <a href="ct1/mathct.html" target="_blank" class="btn">MATH</a>
   <a href="ct1/englishct.html" target="_blank" class="btn">ENGLISH</a>
