Update and rename ct1/physicsct.html to physicsct.html

--- a/physicsct.html
+++ b/physicsct.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,7 +70,7 @@
   <h1>Select The Batch</h1>
 
   <div class="button-stack">
-    <a href="physicsct.html/pdfs/b55phyct.pdf">BATCH 55</a>
+    <a href="b55phyct.pdf">BATCH 55</a>
     </div>
 
   <script>
