--- a/ct.html
+++ b/ct.html
@@ -95,10 +95,10 @@
 
   <div class="button-grid">
   <a href="physicsct.html" target="_blank" class="btn">PHYSICS</a>
-  <a href="ct1/chemistryct.html" target="_blank" class="btn">CHEMISTRY</a>
-  <a href="ct1/mathct.html" target="_blank" class="btn">MATH</a>
-  <a href="ct1/englishct.html" target="_blank" class="btn">ENGLISH</a>
-  <a href="ct1/splct.html" target="_blank" class="btn center">SPL</a>
+  <a href="chemistryct.html" target="_blank" class="btn">CHEMISTRY</a>
+  <a href="mathct.html" target="_blank" class="btn">MATH</a>
+  <a href="englishct.html" target="_blank" class="btn">ENGLISH</a>
+  <a href="splct.html" target="_blank" class="btn center">SPL</a>
 </div>
 
 
