Update and rename ct1/chemistryct.html to chemistryct.html

--- a/chemistryct.html
+++ b/chemistryct.html
@@ -72,7 +72,7 @@
   <h1>Select The Batch</h1>
 
   <div class="button-stack">
-    <a href="pdfs/b55chemct.pdf">BATCH 55</a>
+    <a href="b55chemct.pdf">BATCH 55</a>
     </div>
 
   <script>
